--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
-  "private": true,
+  "name": "word-rotator",
+  "version": "1.0.0",
+  "description": "Animated word rotation component with wheel and flip display modes",
+  "main": "word-rotator.js",
+  "files": [
+    "word-rotator.js",
+    "styles.css",
+    "dist"
+  ],
   "scripts": {
-    "build": "echo 'no build script'"
+    "build": "npm run build:js && npm run build:css",
+    "build:js": "npm run build:js:iife && npm run build:js:esm",
+    "build:js:iife": "esbuild word-rotator.js --bundle --minify --format=iife --global-name=WordRotator --outfile=dist/word-rotator.min.js",
+    "build:js:esm": "esbuild word-rotator.js --bundle --minify --format=esm --outfile=dist/word-rotator.esm.js",
+    "build:css": "esbuild styles.css --minify --outfile=dist/styles.min.css",
+    "prepublishOnly": "npm run build"
+  },
+  "keywords": [
+    "animation",
+    "rotator",
+    "text",
+    "ui",
+    "component",
+    "word-rotation",
+    "split-flap",
+    "display-board"
+  ],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "esbuild": "^0.19.0"
   }
 }
